# RoSorter

./: .gitignore  README.md  example.yaml  main.py  pyproject.toml  requirements.txt  transl.txt
.github/workflows/: build-and-release.yaml
assets/: config.yaml  example.yaml  test_config.yaml
docs/: api.md  config.md  index.md  installation.md  languages.md  overview.md  sorter.md  usage.md
packaging/: actions_build.sh  app_build.bat  pyinstaller_build.spec  script_installer.nsi
src/: cli.py  config.py  daemon.py  example.yaml  languages.py  sorter.py
src/cli/: commands.py  handlers.py  main.py
src/config/: config.py  main.py  validates.py
src/language/: text_loader.py  translates.py
src/logging/: locales.py  logger.py
src/sorter/: __init__.py  applyes.py  copy.py  main.py  options_validate.py  sort.py
tests/: conftest.py  test_config_validates.py  test_sorter_applyes.py  test_sorter_copy.py  test_sorter_options_validate.py  test_sorter_sort.py
