[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RoSorter"
version = "0.1.0-dev"
description = "A file sorter with configuration support"
authors = [
    {name = "Sophron Ragozin", email = "sophronfj@gmail.com"},
]
dependencies = [
    "pystray==0.19.5",
    "PyYAML==6.0.3",
    "tqdm==4.67.3",
    "flet==0.84.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
rosorter = "utility.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["utility*"]

[tool.setuptools.package-data]
"utility.src.language" = ["*.py"]
"utility.src.config" = ["*.py"]
"utility.src.sorter" = ["*.py"]
"utility.src.cli" = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
